[tool.poetry]
name = "stjudecloud-utilities"
version = "1.1.2"
description = "A set of utilities used on the St. Jude Cloud project."
authors = ["St. Jude Cloud <support@stjude.cloud>"]
license = "MIT"
packages = [
    { include = "stjudecloud_utilities" },
]


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pdoc3 = "^0.10.0"
python-semantic-release = "^7.19.2"

[tool.poetry.scripts]
deduplicate-feature-counts = "stjudecloud_utilities.deduplicate_feature_counts:main"
gtf-to-rseqc-bed = "stjudecloud_utilities.gtf_to_rseqc_bed:main"
warden-counts-utils = "stjudecloud_utilities.warden_counts_utils:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "commit"
commit_subject = "chore: bumping version to v{version}"
commit_message = ""
branch = "main"
commit_author = "St. Jude Cloud <support@stjude.cloud>"
build_command = "poetry build"
upload_to_release = "false"
# check_build_status = true